# novint-falcon-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_calibration.cpp  falcon_active_test.cpp  falcon_cursor_motion.cpp  falcon_cursor_xy.cpp  falcon_cursor_xz.cpp  falcon_cursor_xz_fixed.cpp  falcon_fluffy_sphere.cpp  falcon_gentle_motion.cpp  falcon_init_firmware.cpp  falcon_mesh_haptic.cpp  falcon_record_play.cpp  falcon_slippery_sphere.cpp  falcon_spring_sphere.cpp  falcon_test.cpp  falcon_texture_test.cpp  falcon_viscous_goo.cpp  falcon_viscous_sphere.cpp  falcon_y_motion.cpp  run_active_test.sh  run_falcon.sh  run_falcon_test.sh
